# ai-tool-test

./: .gitignore  PROJECT_STATUS.md  README.md
.github/workflows/: release.yml
.shrimp/: tasks.json
.shrimp/memory/: tasks_memory_2025-11-08T08-20-51.json
ai-tools-client/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
ai-tools-client/.claude/: test-plan.md  verification-report.md
ai-tools-client/src/: App.vue  main.ts
ai-tools-client/src-tauri/: Cargo.toml  tauri.conf.json
ai-tools-client/src-tauri/src/: database.rs  main.rs
ai-tools-client/src-tauri/src/commands/: config.rs  mcp_template.rs  mod.rs  mode.rs  supplier.rs
ai-tools-client/src-tauri/src/models/: config.rs  mcp_template.rs  mod.rs  mode.rs  supplier.rs
ai-tools-client/src-tauri/src/services/: database.rs  file_ops.rs  mod.rs  platform.rs
ai-tools-client/src-tauri/src/utils/: mod.rs
ai-tools-client/src/assets/: responsive.css  theme.css
ai-tools-client/src/components/: HelpCenter.vue  MonitoringDashboard.vue  ThemeSwitcher.vue
ai-tools-client/src/i18n/: index.ts
ai-tools-client/src/router/: index.ts
ai-tools-client/src/services/: configFileManager.ts  mcpTemplateApi.ts  supplierApi.ts  tauri.ts
ai-tools-client/src/stores/: app.ts  supplierSwitch.ts  theme.ts
ai-tools-client/src/types/: config.ts  index.ts  mcpTemplate.ts  supplier.ts  tauri.d.ts  tauri.ts
docs/: 1108设计.md  1108设计2.md  SKILL.md  context-search-strategy.md  deployment.md  development.md  intelligent-tools-strategy.md  mcp-tool-strategy.md  user-guide.md
(+9 files in other folders)
